--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
   </head>
 
   <body>
-    <!-- Navbar -->
+    <!-- Navbar
     <nav class="navbar navbar-default navbar-fixed-top navbar-fixed-side">
       <div class="container-fluid">
 
-        <!-- Navbar Header -->
+
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -24,7 +24,6 @@
           <a class="navbar-brand" href="/">MyWeb</a>
         </div>
 
-        <!-- Navbar Menu Items -->
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/" class="navbar-item-link">Home</a></li>
@@ -36,7 +35,25 @@
           </ul>
         </div>
       </div>
+    </nav> -->
+
+
+    <nav>
+      <ul>
+        <li class="active"><a href="/" class="navbar-item-link">Home</a></li>
+        <li><a href="#section1" class="navbar-item-link">Web Applications</a></li>
+        <li><a href="#section2" class="navbar-item-link">Android and Windows</a></li> 
+        <li><a href="#section3" class="navbar-item-link">Other Projects</a></li>
+        <li><a href="#section4" class="navbar-item-link">Interests</a></li>
+        <li><a href="#section-about" class="navbar-item-link">About Me</a></li>  
+      </ul>
     </nav>
+
+
+
+
+
+
 
     <!-- Sections -->
     <div class="container-fluid" id="content-body">
@@ -49,16 +66,3 @@
     </div>
   </body>
 </html>
-
-
-
-<!-- Navbar Menu Items
-        <div class="collapse navbar-collapse" id="navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active menu-home"><a href="/" class="navbar-item-link" id="a-menu-home">Home</a></li>
-            <li class="menu-section1"><a href="#section1" class="navbar-item-link" id="a-menu-section1">Section 1</a></li>
-            <li class="menu-section2"><a href="#section2" class="navbar-item-link" id="a-menu-section2">Section 2</a></li> 
-            <li class="menu-section3"><a href="#section3" class="navbar-item-link" id="a-menu-section3">Section 3</a></li>
-            <li class="menu-about"><a href="#section-about" class="navbar-item-link" id="a-menu-about">About</a></li>  
-          </ul>
-        </div> -->
