--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -68,7 +68,7 @@
           </div>
 
           <div class="slider-element-text slider-element-description">
-            <h4>Learn how I spend my free time</h4>
+            <h4>Learn about how I spend my free time</h4>
           </div>
 
           <div class="slider-element-image slider-element-description" id="symbol-3"></div>
@@ -647,13 +647,13 @@
 
 
         <div class="col-md-12" hidden>
-          <h1>h1</h1>
-          <h2>h2</h2>
-          <h3>h3</h3>
-          <h4>h4</h4>
-          <h5>h5</h5>
-          <h6>h6</h6>
-          <p>pp1</p>
+          <h1>bootstrap phone test h1</h1>
+          <h2>bootstrap phone test h2</h2>
+          <h3>bootstrap phone test h3</h3>
+          <h4>bootstrap phone test h4</h4>
+          <h5>bootstrap phone test h5</h5>
+          <h6>bootstrap phone test h6</h6>
+          <p>bootstrap phone test p1</p>
         </div>
 
 
