--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -88,10 +88,10 @@
 
           <div class="slider-element-image slider-element-description" id="symbol-4"></div>
 
-        </div>
-      </div> 
-    </div>
 
+        </div>
+      </div>
+    </div>
 
   </section>
 </div>
@@ -113,7 +113,7 @@
     <h4 class="title-text">From a single page website to full sized web applications.</h4>
 
     <!-- Section elements -->
-    <div class="container-fluid">
+    <div class="container-fluid section-element-container">
 
       <!-- element 1-0 -->
       <div class="row left-side">
@@ -238,7 +238,7 @@
 
 
     <!-- Section elements -->
-    <div class="container-fluid">
+    <div class="container-fluid section-element-container">
 
       <!-- element 2-0 -->
       <div class="row left-side">
@@ -369,7 +369,7 @@
     <h4 class="title-text">Some description Blah</h4>
 
     <!-- Section elements -->
-    <div class="container-fluid">
+    <div class="container-fluid section-element-container">
 
       <!-- element 3-0 -->
       <div class="row left-side">
@@ -431,7 +431,7 @@
 
 
     <!-- Section elements -->
-    <div class="container-fluid">
+    <div class="container-fluid section-element-container">
 
 
       <!-- element 4-0 -->
@@ -646,7 +646,7 @@
 
 
 
-        <div class="col-md-12" hidden>
+        <div class="col-md-12">
           <h1>bootstrap phone test h1</h1>
           <h2>bootstrap phone test h2</h2>
           <h3>bootstrap phone test h3</h3>
