--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,43 +9,16 @@
   </head>
 
   <body>
-    <!-- Navbar
-    <nav class="navbar navbar-default navbar-fixed-top navbar-fixed-side">
-      <div class="container-fluid">
 
 
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">MyWeb</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/" class="navbar-item-link">Home</a></li>
-            <li><a href="#section1" class="navbar-item-link">Web Applications</a></li>
-            <li><a href="#section2" class="navbar-item-link">Android and Windows</a></li> 
-            <li><a href="#section3" class="navbar-item-link">Other Projects</a></li>
-            <li><a href="#section4" class="navbar-item-link">Interests</a></li>
-            <li><a href="#section-about" class="navbar-item-link">About Me</a></li>  
-          </ul>
-        </div>
-      </div>
-    </nav> -->
-
-
-    <nav>
+    <nav class="custom-nav">
       <ul>
-        <li class="active"><a href="/" class="navbar-item-link">Home</a></li>
-        <li><a href="#section1" class="navbar-item-link">Web Applications</a></li>
-        <li><a href="#section2" class="navbar-item-link">Android and Windows</a></li> 
-        <li><a href="#section3" class="navbar-item-link">Other Projects</a></li>
-        <li><a href="#section4" class="navbar-item-link">Interests</a></li>
-        <li><a href="#section-about" class="navbar-item-link">About Me</a></li>  
+        <li class="active"><a href="/" class="navbar-item-link"><h3>Home</h3></a></li>
+        <li><a href="#section1" class="navbar-item-link"><h3>Web Applications</h3></a></li>
+        <li><a href="#section2" class="navbar-item-link"><h3>Android and Windows</h3></a></li> 
+        <li><a href="#section3" class="navbar-item-link"><h3>Other Projects</h3></a></li>
+        <li><a href="#section4" class="navbar-item-link"><h3>Interests</h3></a></li>
+        <li><a href="#section-about" class="navbar-item-link"><h3>About Me</h3></a></li>  
       </ul>
     </nav>
 
