--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -233,7 +233,7 @@
           <div>
             <h4>BRUSH!</h4>
             <hr class="hr-short hr-border-white">
-            <p>Smartwatch and smartphone application designed to be help and motivate children to brush their teeth</p>
+            <p>Smartwatch and smartphone application designed to help and motivate children to brush their teeth</p>
 
             <ul class="desc-list">
               <li>UMoto360 as the base wearable device</li>
@@ -297,8 +297,7 @@
   <section class="section-block" id="section3">
     <h1 class="title-text">Other Projects</h1>
     <hr class="hr-long hr-border-primary">
-    <h4 class="title-text">Blah Blah Blah</h4>
-    <h4 class="title-text">Some description Blah</h4>
+    <h4 class="title-text">Artificial Intelligence, Algorithms</h4>
 
     <!-- Section elements -->
     <div class="container-fluid section-element-container">
@@ -478,7 +477,7 @@
         <div class="col-md-5">
           <p>Bachelor - Electrical Engineering and Computer Science</p>
           <p>4th Year, Expected Graduation: December 2016</p>
-          <a href="#" id="link-show-course">Show list of completed courses <span class="glyphicon glyphicon glyphicon-chevron-down" aria-hidden="true"></a>
+          <a href="#" id="link-show-course">Show list of courses <span class="glyphicon glyphicon glyphicon-chevron-down" aria-hidden="true"></a>
           <div id="course-list">
             <p style="margin-top: 0">Data Structures (CS61B)</p>
             <p>Machine Structures (CS61C)</p>
@@ -490,6 +489,7 @@
             <p>Circuits (EE40)</p>
             <p>3D Modeling, 3D Animation (UCBUGG)</p>
             <p>Database Systems (CS186)</p>
+            <p>Computer Security (CS161)</p>
           </div>
         </div>
         <div class="col-md-12" style="height: 3vh">
