--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -94,6 +94,7 @@
     </div>
 
   </section>
+  <div class="intro"></div>
 </div>
 
 
@@ -107,10 +108,12 @@
 <div class="content-block" id="content1-block">
   <section class="section-block" id="section1">
     <!-- Section title -->
-    <h1 class="title-text">Web Applications</h1>
-    <hr class="hr-long hr-border-primary">
-    <h4 class="title-text">Front-end and back-end.</h4>
-    <h4 class="title-text">From a single page website to full sized web applications.</h4>
+    <div class="section-title">
+      <h1 class="title-text">Web Applications</h1>
+      <hr class="hr-long hr-border-white">
+      <h4 class="title-text">Front-end and back-end.</h4>
+      <h4 class="title-text">From a single page website to full sized web applications.</h4>
+    </div>
 
     <!-- Section elements -->
     <div class="container-fluid section-element-container">
@@ -196,10 +199,11 @@
 <div class="content-block" id="content2-block">
   <section class="section-block" id="section2">
     <!-- Section title -->
-    <h1 class="title-text">Android and Windows</h1>
-    <hr class="hr-long hr-border-white">
-    <h4 class="title-text">Applications for phones, wearable devices, and computers.</h4>
-
+    <div class="section-title">
+      <h1 class="title-text">Android and Windows</h1>
+      <hr class="hr-long hr-border-white">
+      <h4 class="title-text">Applications for phones, wearable devices, and computers.</h4>
+    </div>
 
     <!-- Section elements -->
     <div class="container-fluid section-element-container">
@@ -295,9 +299,11 @@
 <!-- Section3 -->
 <div class="content-block" id="content3-block">
   <section class="section-block" id="section3">
-    <h1 class="title-text">Other Projects</h1>
-    <hr class="hr-long hr-border-primary">
-    <h4 class="title-text">Artificial Intelligence, Algorithms</h4>
+    <div class="section-title">
+      <h1 class="title-text">Other Projects</h1>
+      <hr class="hr-long hr-border-white">
+      <h4 class="title-text">Artificial Intelligence, Algorithms</h4>
+    </div>
 
     <!-- Section elements -->
     <div class="container-fluid section-element-container">
@@ -351,11 +357,12 @@
 <div class="content-block" id="content4-block">
   <section class="section-block" id="section4">
     <!-- Section title -->
-    <h1 class="title-text">Interests</h1>
-    <hr class="hr-long hr-border-white">
-    <h4 class="title-text">Playing games is fun.</h4>
-    <h4 class="title-text">But sometimes, building and modifying one is even more fun.</h4>
-
+    <div class="section-title">
+      <h1 class="title-text">Interests</h1>
+      <hr class="hr-long hr-border-white">
+      <h4 class="title-text">Playing games is fun.</h4>
+      <h4 class="title-text">But sometimes, building and modifying one is even more fun.</h4>
+    </div>
 
     <!-- Section elements -->
     <div class="container-fluid section-element-container">
@@ -445,11 +452,13 @@
 <div class="content-block" id="content-about-block">
   <section class="section-block" id="section-about" style="padding-bottom: 100px">
     <div class="container">
-      <div class="row">
+      <div class="section-title">
         <h1 class="title-text">About Me</h1>
         <hr class="hr-long hr-border-white">
+      </div>
 
 
+      <div class="row">
         <div class="col-md-12" style="height: 3vh">
         </div>
 
