--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,7 +43,7 @@ div {
 body {
 	margin: 0px;
 	padding: 0px;
-    background-image: url('/images/berkeley_background_blur20.png');
+    background-image: url('/images/berkeley_background_blur20_grad.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -56,26 +56,29 @@ body {
 
 // Mainpage section blocks
 section {
-	padding-top: 100px;
-	padding-bottom: 160px;
-	margin: 0 auto 0 auto;
+	padding: 0;
+	margin: 0;
 	min-height: 900px;
-	max-width: 1400px;
 }
 
 section#home {
 	padding: 0px;
 	margin: 0;
-	min-height: 100vh;
+	min-height: 90vh;
 	max-width: none;
 }
-
+.intro {
+	min-height: 10vh;
+	background-color: $color-white;
+}
 
 .section-element-container {
-	margin: 0;
-	padding: 0;
+	margin: 0 auto 0 auto;
+	padding: 0 0 160px 0;
 	width: 100%;
 	overflow: hidden;
+	background-color: white;
+	max-width: 1400px;
 }
 
 
@@ -140,19 +143,6 @@ section#home {
 	&.ext-link-youtube {
 		background-color: #e52d27;
 	}
-
-	.ext-link-github {
-		background-color: $color-black;
-	}
-	.ext-link-youtube {
-		background-color: #e52d27;
-	}
-	.ext-link-website {
-		background-color: $color-primary-4;
-	}
-	.ext-link-detail {
-		background-color: $color-complement-4;
-	}
 }
 
 #link-show-course {
@@ -165,7 +155,7 @@ section#home {
 
 #content1-block {
 	color: $color-gray-medium-light;
-	background-color: $color-white;
+	background-color: transparent;
 
 	h1, div > h4 {
 		color: $color-primary-5;
@@ -174,13 +164,18 @@ section#home {
 }
 
 #content2-block {
-	color: $color-white;
-	background-color: $color-primary-1;
+	color: $color-gray-medium-light;
+	background-color: transparent;
+
+	h1, div > h4 {
+		color: $color-primary-5;
+		font-weight: bold;
+	}
 }
 
 #content3-block {
 	color: $color-gray-medium-light;
-	background-color: $color-white;
+	background-color: transparent;
 
 	h1, div > h4 {
 		color: $color-primary-5;
@@ -189,14 +184,29 @@ section#home {
 }
 
 #content4-block {
-	color: $color-white;
-	background-color: $color-primary-1;
+	color: $color-gray-medium-light;
+	background-color: transparent;
+
+	h1, div > h4 {
+		color: $color-primary-5;
+		font-weight: bold;
+	}
 }
 
 #content-about-block {
 	min-height: 100vh;
 	color: $color-gray-light;
 	background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+.section-title {
+	background-color: transparent;
+	padding: 100px 0 40px 0;
+
+	h1, h4 {
+		color: $color-white !important;
+	}
 }
 
 section > div.container {
@@ -218,7 +228,7 @@ nav {
 	position: fixed;
 	top: 30px;
 	left: 30px;
-	z-index: 100;
+	z-index: 1000;
 
 	ul {
 		margin: 0;
@@ -230,14 +240,16 @@ nav {
 
 			a {
 				display: block;
+				overflow: hidden;
+				white-space: nowrap;
 				background-color: $color-black;
 				padding-left: 20px;
 				color: $color-gray-medium-light;
-				width: 60px;
+				width: 280px;
 				height: 60px;
 
 				h3 {
-					display: none;
+					display: inline-block;
 					font-family: 'Josefin Sans', sans-serif !important;
 				}
 			}
@@ -254,20 +266,6 @@ nav {
 		}
 	}
 }
-
-nav:hover > ul > li, nav.active > ul > li {
-
-	a {
-		width: 280px;
-
-		h3 {
-			display: inline-block;
-		}
-	}
-}
-
-
-
 
 
 
@@ -332,17 +330,12 @@ p {
 
 
 // Home Slider
-.container-fluid, .row {
-	padding: 0;
-	magin: 0;
-}
 #home-slider {
 	 overflow: hidden;
 	 padding: 0px;
 	 height: 100%;
 	 white-space: nowrap;
 	 font-size: 0;
-
 
 	.slider-element-container-first {
 		margin: 0;
@@ -394,7 +387,7 @@ p {
 
 .slider-element-background {
 	padding: 30px;
-	height: 100vh;
+	height: 90vh;
 	width: 60vw;
 }
 
