--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,7 +35,7 @@ div {
 		margin: 0px;
 		padding: 0px;
 		color: $color-white;
-		background: linear-gradient($color-primary-opaque, $color-complement-opaque);
+		// background: linear-gradient($color-primary-opaque, $color-complement-opaque);
 	}
 }
 
@@ -43,8 +43,9 @@ div {
 body {
 	margin: 0px;
 	padding: 0px;
-    background-image: url('/images/berkeley_background_blur20_grad.png');
+    background-image: url('/images/berkeley_background_blur20.png');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -66,9 +67,57 @@ section#home {
 	margin: 0;
 	min-height: 90vh;
 	max-width: none;
+	background: linear-gradient($color-primary-opaque, $color-complement-opaque);
 }
 .intro {
 	min-height: 10vh;
+	background-color: $color-white;
+	text-align: center;
+	color: $color-primary-5;
+
+	h3 {
+		font-weight: bold;
+		line-height: 10vh;
+		margin: 0;
+	}
+
+	.mobile {
+		display: none;
+	}
+
+	.desktop {
+		display: inline;
+	}
+}
+
+.section-title {
+	background-color: transparent;
+	overflow: hidden;
+
+	h1 {
+		font-weight: bold !important;
+		color: $color-white !important;
+	}
+
+	h4 {
+		font-weight: normal !important;
+		color: $color-white !important;
+	}
+
+	.layer {
+		background-color: rgba(255, 116, 0, 0.7);
+		overflow: hidden;
+		padding: 80px 20px 50px 20px;
+	}
+
+	&.section-title-about {
+		padding: 100px 0 40px 0;
+	}
+}
+
+.section-body {
+	padding: 0;
+	margin: 0;
 	background-color: $color-white;
 }
 
@@ -77,8 +126,7 @@ section#home {
 	padding: 0 0 160px 0;
 	width: 100%;
 	overflow: hidden;
-	background-color: white;
-	max-width: 1400px;
+	max-width: 1000px;
 }
 
 
@@ -191,6 +239,13 @@ section#home {
 		color: $color-primary-5;
 		font-weight: bold;
 	}
+
+	.section-title {
+		background-image: url('/images/4_0.png');
+    	background-size: cover;
+    	background-repeat: no-repeat;
+    	background-position: center;
+	}
 }
 
 #content-about-block {
@@ -200,14 +255,7 @@ section#home {
 }
 
 
-.section-title {
-	background-color: transparent;
-	padding: 100px 0 40px 0;
 
-	h1, h4 {
-		color: $color-white !important;
-	}
-}
 
 section > div.container {
 	margin: 0;
@@ -215,7 +263,7 @@ section > div.container {
 }
 
 .left-side, .right-side {
-	margin-top: 80px !important;
+	margin-top: 80px;
 }
 
 
@@ -440,9 +488,13 @@ h1, h2 {
 	font-family: 'Josefin Sans', sans-serif !important;
 }
 
-div.row {
-	margin: 0;
+h1 {
+	font-size: 42px;
 }
+
+// div.row {
+// 	margin: 0;
+// }
 
 
 
@@ -468,12 +520,13 @@ div.row {
 hr {
 	&.hr-long { 
 		width: 60%;
-		height: 2px;
+		height: 3px;
 		border: none;
+		max-width: 1000px;
 	}
 	&.hr-short {
 		width: 30px;
-		height: 2px;
+		height: 3px;
 		border: none;
 		margin: 12px 0px;
 	}	
@@ -520,5 +573,34 @@ hr {
 	.slider-element-container {
 		display: none !important;
 	}
+
+	.section-element-container {
+		width: 85%;
+		padding-bottom: 30px;
+	}
+
+	.intro {
+
+		.mobile {
+			display: inline;
+		}
+
+		.desktop {
+			display: none;
+		}
+	}
+
+	.left-side, .right-side {
+		margin-top: 120px;
+		margin-bottom: 240px;
+	}
+
+	.btn {
+		width: 40vw;
+		height: 7vw;
+		font-size: 4vw;
+	}
+
+
 }
 
